--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
+    <width>1204</width>
     <height>800</height>
    </rect>
   </property>
@@ -36,8 +36,8 @@
    <widget class="QFrame" name="parameterFrame">
     <property name="geometry">
      <rect>
-      <x>749</x>
-      <y>-1</y>
+      <x>740</x>
+      <y>-220</y>
       <width>441</width>
       <height>731</height>
      </rect>
@@ -48,336 +48,345 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QWidget" name="verticalLayoutWidget">
+    <widget class="QGroupBox" name="simOptionsBox">
      <property name="geometry">
       <rect>
-       <x>9</x>
-       <y>-1</y>
+       <x>0</x>
+       <y>250</y>
        <width>431</width>
-       <height>731</height>
+       <height>471</height>
       </rect>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QGroupBox" name="simOptionsBox">
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>220</height>
-         </size>
-        </property>
-        <property name="title">
-         <string>Simulation Options</string>
-        </property>
-        <widget class="QWidget" name="horizontalLayoutWidget">
-         <property name="geometry">
-          <rect>
-           <x>9</x>
-           <y>19</y>
-           <width>421</width>
-           <height>91</height>
-          </rect>
-         </property>
-         <layout class="QHBoxLayout" name="horizontalLayout">
-          <item>
-           <widget class="QGroupBox" name="SimulationBox">
-            <property name="title">
-             <string>Simulation Controls</string>
-            </property>
-            <widget class="QPushButton" name="startSimulationButton">
-             <property name="geometry">
-              <rect>
-               <x>10</x>
-               <y>40</y>
-               <width>181</width>
-               <height>27</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Start Simulation</string>
-             </property>
-            </widget>
-           </widget>
-          </item>
-          <item>
-           <widget class="QGroupBox" name="SimParametersBox">
-            <property name="title">
-             <string>Parameters</string>
-            </property>
-            <widget class="QLabel" name="timeStepLabel">
-             <property name="geometry">
-              <rect>
-               <x>10</x>
-               <y>30</y>
-               <width>81</width>
-               <height>21</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Time Step:</string>
-             </property>
-            </widget>
-            <widget class="QLabel" name="newtonTolLabel">
-             <property name="geometry">
-              <rect>
-               <x>10</x>
-               <y>50</y>
-               <width>131</width>
-               <height>21</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Newton Tolerance:</string>
-             </property>
-            </widget>
-            <widget class="QLabel" name="newtonMaxItersLabel">
-             <property name="geometry">
-              <rect>
-               <x>10</x>
-               <y>70</y>
-               <width>131</width>
-               <height>21</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Newton Max Iters:</string>
-             </property>
-            </widget>
-            <widget class="QLineEdit" name="timeStepEdit">
-             <property name="geometry">
-              <rect>
-               <x>140</x>
-               <y>30</y>
-               <width>61</width>
-               <height>21</height>
-              </rect>
-             </property>
-            </widget>
-            <widget class="QLineEdit" name="newtonTolEdit">
-             <property name="geometry">
-              <rect>
-               <x>140</x>
-               <y>50</y>
-               <width>61</width>
-               <height>21</height>
-              </rect>
-             </property>
-            </widget>
-            <widget class="QLineEdit" name="newtonMaxItersEdit">
-             <property name="geometry">
-              <rect>
-               <x>140</x>
-               <y>70</y>
-               <width>61</width>
-               <height>21</height>
-              </rect>
-             </property>
-            </widget>
-            <widget class="QLabel" name="moonPiecesButton">
-             <property name="geometry">
-              <rect>
-               <x>10</x>
-               <y>120</y>
-               <width>121</width>
-               <height>21</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Moon Pieces:</string>
-             </property>
-            </widget>
-            <widget class="QLabel" name="explosionMag">
-             <property name="geometry">
-              <rect>
-               <x>10</x>
-               <y>140</y>
-               <width>131</width>
-               <height>21</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Explosion Mag:</string>
-             </property>
-            </widget>
-            <widget class="QLineEdit" name="moonPieceEdit">
-             <property name="geometry">
-              <rect>
-               <x>140</x>
-               <y>120</y>
-               <width>61</width>
-               <height>21</height>
-              </rect>
-             </property>
-            </widget>
-            <widget class="QLineEdit" name="explosionMagEdit">
-             <property name="geometry">
-              <rect>
-               <x>140</x>
-               <y>140</y>
-               <width>61</width>
-               <height>21</height>
-              </rect>
-             </property>
-            </widget>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="activeForcesBox">
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>170</height>
-         </size>
-        </property>
-        <property name="title">
-         <string>Active Forces</string>
-        </property>
-        <widget class="QCheckBox" name="gravityCheckBox">
-         <property name="geometry">
-          <rect>
-           <x>30</x>
-           <y>30</y>
-           <width>97</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Gravity</string>
-         </property>
-        </widget>
-        <widget class="QCheckBox" name="collisionPenaltyCheckBox">
-         <property name="geometry">
-          <rect>
-           <x>30</x>
-           <y>50</y>
-           <width>131</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Collision Penalty Force</string>
-         </property>
-        </widget>
-        <widget class="QLabel" name="penaltyStiffnessLabel">
-         <property name="geometry">
-          <rect>
-           <x>230</x>
-           <y>50</y>
-           <width>61</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Stiffness:</string>
-         </property>
-        </widget>
-        <widget class="QLineEdit" name="penaltyStiffnessEdit">
-         <property name="geometry">
-          <rect>
-           <x>360</x>
-           <y>50</y>
-           <width>61</width>
-           <height>21</height>
-          </rect>
-         </property>
-        </widget>
-        <widget class="QCheckBox" name="collisionImpulsesCheckBox">
-         <property name="geometry">
-          <rect>
-           <x>30</x>
-           <y>70</y>
-           <width>131</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Collision Impulses</string>
-         </property>
-        </widget>
-        <widget class="QLabel" name="CoRLabel">
-         <property name="geometry">
-          <rect>
-           <x>230</x>
-           <y>70</y>
-           <width>61</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>CoR:</string>
-         </property>
-        </widget>
-        <widget class="QLineEdit" name="CoREdit">
-         <property name="geometry">
-          <rect>
-           <x>360</x>
-           <y>70</y>
-           <width>61</width>
-           <height>21</height>
-          </rect>
-         </property>
-        </widget>
-        <widget class="QLabel" name="velTreshLabel">
-         <property name="geometry">
-          <rect>
-           <x>230</x>
-           <y>90</y>
-           <width>81</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Vel Threshold:</string>
-         </property>
-        </widget>
-        <widget class="QLineEdit" name="velTreshEdit">
-         <property name="geometry">
-          <rect>
-           <x>360</x>
-           <y>90</y>
-           <width>61</width>
-           <height>21</height>
-          </rect>
-         </property>
-        </widget>
-        <widget class="QCheckBox" name="gravityCheckBox_2">
-         <property name="geometry">
-          <rect>
-           <x>30</x>
-           <y>30</y>
-           <width>97</width>
-           <height>21</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>Gravity</string>
-         </property>
-        </widget>
-        <zorder>gravityCheckBox</zorder>
-        <zorder>collisionPenaltyCheckBox</zorder>
-        <zorder>penaltyStiffnessLabel</zorder>
-        <zorder>penaltyStiffnessEdit</zorder>
-        <zorder>collisionImpulsesCheckBox</zorder>
-        <zorder>CoRLabel</zorder>
-        <zorder>CoREdit</zorder>
-        <zorder>velTreshLabel</zorder>
-        <zorder>velTreshEdit</zorder>
-        <zorder>UIOptionsBox</zorder>
-        <zorder>gravityCheckBox_2</zorder>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="UIOptionsBox">
-        <property name="title">
-         <string>UI Options</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>500</height>
+      </size>
+     </property>
+     <property name="title">
+      <string>Simulation Options</string>
+     </property>
+     <widget class="QGroupBox" name="activeForcesBox">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>100</y>
+        <width>431</width>
+        <height>230</height>
+       </rect>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>230</height>
+       </size>
+      </property>
+      <property name="title">
+       <string>Active Forces</string>
+      </property>
+      <widget class="QCheckBox" name="gravityCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>30</y>
+         <width>97</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Gravity</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="springLabel">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>50</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Spring Stiffness</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="springEdit">
+       <property name="geometry">
+        <rect>
+         <x>360</x>
+         <y>50</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="shearLabel">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>70</y>
+         <width>111</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Shear Stiffness:</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="shearEdit">
+       <property name="geometry">
+        <rect>
+         <x>360</x>
+         <y>70</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="bendLabel">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>90</y>
+         <width>111</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Bend Stiffness:</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="bendEdit">
+       <property name="geometry">
+        <rect>
+         <x>360</x>
+         <y>90</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="dampLabel">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>120</y>
+         <width>111</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Damp Stiffness:</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="dampEdit">
+       <property name="geometry">
+        <rect>
+         <x>360</x>
+         <y>120</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="collisionRepulsionCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>50</y>
+         <width>191</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Collision Repulsion</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="stretchingCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>70</y>
+         <width>191</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Stretching</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="shearingCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>90</y>
+         <width>191</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Shearing</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="bendingCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>110</y>
+         <width>191</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Bending</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="clothWidthLabel">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>190</y>
+         <width>111</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Cloth Width:</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="clothWidthEdit">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>190</y>
+         <width>81</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="clothSideLenLabel">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>210</y>
+         <width>111</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Cloth Side Len:</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="clothSideLenEdit">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>210</y>
+         <width>81</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QPushButton" name="startSimulationButton">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>50</y>
+        <width>181</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Start Simulation</string>
+      </property>
+     </widget>
+     <widget class="QGroupBox" name="SimParametersBox">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>30</y>
+        <width>206</width>
+        <height>89</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Parameters</string>
+      </property>
+      <widget class="QLabel" name="timeStepLabel">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>81</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Time Step:</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="timeStepEdit">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>30</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="moonPiecesButton">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>120</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Moon Pieces:</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="explosionMag">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>140</y>
+         <width>131</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Explosion Mag:</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="moonPieceEdit">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>120</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="explosionMagEdit">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>140</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
+     <zorder>activeForcesBox</zorder>
+     <zorder>startSimulationButton</zorder>
+     <zorder>SimParametersBox</zorder>
+     <zorder>clothSideLenEdit</zorder>
     </widget>
    </widget>
   </widget>
@@ -386,7 +395,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1200</width>
+     <width>1204</width>
      <height>25</height>
     </rect>
    </property>
